[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "pykrx"
version = "1.0.51.2"
description = "KRX data scraping"
readme = "readme.MD"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Brayden Jo"},
  {name = "Jonghun Yoo"},
]
maintainers = [
  {name = "Brayden Jo", email = "brayden.jo@outlook.com"},
  {name = "Jonghun Yoo", email = "jonghun.yoo@outlook.com"},
  {name = "pystock", email = "pystock@outlook.com"},
  {name = "Eunseok Hyun", email = "eshyun@gmail.com"},
]
urls = {Homepage = "https://github.com/sharebook-kr/pykrx/"}
dependencies = [
  "requests>=2.31,<3",
  "pandas>=2.0,<3",
  "numpy>=1.23,<3",
  "xlrd>=2,<3",
  "deprecated>=1.2,<2",
  "multipledispatch>=1.0,<2",
  "matplotlib>=3.8,<4",
  "curl-cffi>=0.7",
  "portalocker",
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "ipdb>=0.13.13",
    "ipython>=8.37.0",
    "marimo>=0.18.4",
    "pdbsublimetextsupport>=0.2",
    "pyinstrument>=5.1.1",
    "pytest>=9.0.2",
]


[tool.setuptools]
zip-safe = false


[tool.setuptools.packages.find]
include = ["pykrx", "pykrx.*"]


[tool.setuptools.package-data]
pykrx = ["*.ttf"]
