[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "pykrx"
version = "1.0.51.2"
description = "KRX data scraping"
readme = "readme.MD"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Brayden Jo"},
  {name = "Jonghun Yoo"},
]
maintainers = [
  {name = "Brayden Jo", email = "brayden.jo@outlook.com"},
  {name = "Jonghun Yoo", email = "jonghun.yoo@outlook.com"},
  {name = "pystock", email = "pystock@outlook.com"},
  {name = "Eunseok Hyun", email = "eshyun@gmail.com"},
]
urls = {Homepage = "https://github.com/sharebook-kr/pykrx/"}
dependencies = [
  "requests>=2.31,<3",
  "pandas>=2.0",
  "numpy>=1.23",
  "xlrd>=2,<3",
  "deprecated>=1.2",
  "multipledispatch>=1.0",
  "matplotlib>=3.8",
  "curl-cffi>=0.7",
  "portalocker",
]

[dependency-groups]
dev = [
    "build",
    "ipdb",
    "ipython",
    "marimo",
    "pdbsublimetextsupport",
    "pyinstrument",
    "pytest",
]


[tool.setuptools]
zip-safe = false


[tool.setuptools.packages.find]
include = ["pykrx", "pykrx.*"]


[tool.setuptools.package-data]
pykrx = ["*.ttf"]
